# detect-object

./: .gitignore  CMakeLists.txt  README.md  main.py
src/: conv_2D.cu  diff.cu  error.cu  error.hpp  grayscale.cu  image.cpp  image.cu  image.hpp  img_components.cu  img_conv_2D.cu  img_diff.cu  img_dilation.cu  img_grayscale.cu  img_io.cpp  img_io.hpp  img_morph.cu  img_operations.hpp  main.cu  object_detection.cu  object_detection.hpp  test.hpp  test_components.cu  test_conv_2D.cu  test_diff.cu  test_grayscale.cu  test_morph.cu  test_open.cu  utils.cpp  utils.h
